syntax = "proto3";

package grpc.simulation;

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}

service Simulation {
    rpc UnaryRPC(HelloRequest) returns (HelloResponse);
    rpc ServerStreamingRPC(HelloRequest) returns (stream HelloResponse);
    rpc ClientStreamingRpc(stream HelloRequest) returns (HelloResponse);
    rpc BiDirectionalStreamingRpc(stream HelloRequest) returns (stream HelloResponse);
}
